--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <a href="./1-gallery.html">Go to Gallery</a>
+    <nav class="nav">
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="./1-gallery.html">Go to Gallery</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="./2-form.html">Go to Form</a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
