add main feature

--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS Homework9</title>
+    <title>JS Homework11</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <nav class="nav">
-      <ul class="nav-list">
-        <li class="nav-item">
-          <a href="./1-gallery.html">Go to Gallery</a>
-        </li>
-
-        <li class="nav-item">
-          <a href="./2-form.html">Go to Form</a>
-        </li>
-      </ul>
-    </nav>
+    <form class="search-form" autocomplete="off">
+      <label>
+        <input
+          type="search"
+          name="search"
+          placeholder="Search images..."
+          autofocus
+        />
+      </label>
+      <button type="submit">Search</button>
+      <ul class="gallery"></ul>
+    </form>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
