add stiles and loader

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,10 @@
         />
       </label>
       <button type="submit">Search</button>
-      <ul class="gallery"></ul>
     </form>
+    <ul class="gallery"></ul>
+    <span class="loader hidden"></span>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
