--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
       <button type="submit">Search</button>
     </form>
     <ul class="gallery"></ul>
+    <button class="load-button hidden" type="button">Load more</button>
     <span class="loader hidden"></span>
 
     <script type="module" src="./main.js"></script>
